examples/errors/parsing/functions-no-arrow.cn
fun double : int -> int [pure] = {
  x  x + x
}

main : () [impure] =
  let v = double 21;
  ()
